# protovalidate-cc

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  MODULE.bazel  MODULE.bazel.tmpl  Makefile  README.md  REPO.bazel  WORKSPACE  buf.gen.yaml  celcpp.patch  output.txt  protovalidate_cc-config.cmake.in  protovalidate_cc.pc.in  vcpkg-configuration.json  vcpkg.json
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  cmake.yaml  conformance.yaml  pr-hygiene.yaml  publish-to-bcr.yaml  release.yaml  release_prep.sh
CMake/: cel-cpp.patch
bazel/: BUILD.bazel  cel_cpp.patch  deps.bzl  fmt.BUILD.bazel  json.bzl
bazel/patches/cel_cpp/: 0001-Allow-message-field-access-using-index-operator.patch
buf/validate/: BUILD.bazel  CMakeLists.txt  validator.cc  validator.h  validator_test.cc
buf/validate/conformance/: BUILD.bazel  expected_failures.yaml  expected_failures_linux.yaml  expected_failures_mac.yaml  runner.cc  runner.h  runner_main.cc  runner_test.cc
buf/validate/internal/: BUILD.bazel  cel_constraint_rules.cc  cel_constraint_rules.h  cel_rules.h  cel_validation_rules.cc  cel_validation_rules.h  celext.cc  celext.h  celext_test.cc  constraint.cc  constraint.h  constraint_rules.cc  constraint_rules.h  constraint_test.cc  constraints.cc  constraints.h  constraints_test.cc  extra_func.cc  extra_func.h  extra_func_test.cc  field_rules.cc  field_rules.h  message_factory.cc  message_factory.h  message_rules.cc  message_rules.h  proto_field.h  rules.cc  rules.h  rules_test.cc  starts_with.cc  starts_with.h  string_format.cc  string_format.h  string_format_test.cc  validate.h  validation_rules.h
buf/validate/internal/lib/: BUILD.bazel  ipv4.cc  ipv4.h  ipv4_test.cc  ipv6.cc  ipv6.h  ipv6_test.cc  parser_common.h  uri.cc  uri.h  uri_test.cc
cmake/: Antlr4.cmake  CelCpp.cmake  Deps.cmake  GitVersion.cmake  Googleapis.cmake  MakePatchCommand.cmake  README.md  Re2.cmake  SharedDeps.cmake  Version.cmake
cmake/cel-cpp/: CMakeLists.txt
cmake/example/: CMakeLists.txt  example.proto  main.cc
e2e/bzlmod/: BUILD.bazel  MODULE.bazel  main.cc
